test/expected/explain_o_less_2rck_b++default.out
explain bool operator<(S const&, S const&) = default
           ^
12: error: default non-member operator "<" must also be "friend"
